# eplumber

./: .gitignore  Makefile  README.md  eplumber.py  main.py  models.py  mqtt.py  notification.py  pyproject.toml  sandbox.py  web_api.py
static/: .prettierignore  .prettierrc  config.html  config.vue  index.html  index.vue
static/css/: dashboard.css  main.css
