[project]
name = "eplumber"
version = "0.1.0"
description = "IoT automation system for smart home control using MQTT/HTTP sensors and rule-based actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs",
    "typing-extensions",
    "pydantic",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.3",
    "jsonpath-ng",
    "ipdb>=0.13.13",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.ruff]
line-length = 92
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = ["B008","B904"]

[tool.ruff.lint.per-file-ignores]
"web_api.py" = ["F841"]
